--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Index.cshtml
@@ -34,8 +34,9 @@
             </td>
             <td>
                 @*<input type="button" value="Asignar preguntas" class="btn btn-secondary" id="botonNuevaSeccion" onclick="accionBotonAsignarPregunta()"/>*@
-              
-                @Html.ActionLink("Asignar Preguntas", "AsignarPreguntas", "CrearFormulario" ,new { codForm = item.CodigoFormulario}, null)
+                
+                
+                @Html.ActionLink("Asignar Preguntas", "AsignarPreguntas", "CrearFormulario" ,new { codForm = item.CodigoFormulario}, new { @class = "btn btn-default" })
                 @*@Html.ActionLink("Details", "Details", new { id=item.CodigoFormulario }) |*@
                 @*@Html.ActionLink("Delete", "Delete", new { id=item.CodigoFormulario })*@
             </td>
