--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -10,6 +10,7 @@
 <script src="~/Scripts/jquery-3.3.1.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script>
 
@@ -31,9 +32,16 @@
                     ItemId: $("input:radio[name=item]:checked").val()
                     },
                     success: function (result) {
-                        alert("Se asigno la pregunta: " + $("input:radio[name=item]:checked").val() + ", en la seccíon: "
-                            + $("input:radio[name=seccion]:checked").val()),
-                        $('#ConformadosID').html(result);
+                        //console.log(result.console)
+                        if (result) {
+                            alert("Se asigno la pregunta: " + $("input:radio[name=item]:checked").val() + ", en la seccíon: "
+                                + $("input:radio[name=seccion]:checked").val()),
+                                $('#ConformadosID').html(result);
+                        } else {
+                            alert("No se asigno la pregunta: " + $("input:radio[name=item]:checked").val() + ", en la seccíon: "
+                                + $("input:radio[name=seccion]:checked").val()
+                                + " porque la pregunta ya se asigno a esa sección.")
+                        }
                     },
                     error: function () {
                         alert("No se asigno la pregunta: " + $("input:radio[name=item]:checked").val() + ", en la seccíon: "
@@ -78,16 +86,11 @@
     </div>
 
 </div>
-<div class="row">
-    <div class="col-sm-6 right">
-        <input type="button" id="btnSave" value="Asignar pregunta" class="btn btn-secondary"  onclick="accionBotonCrearNueva()" />
-    </div>
-</div>
+
+
 
 <div class="row">
-
-
-    <div class="col-sm-5">
+    <div class="col-sm-6">
         <h4 align='center'><strong>@Html.Label("Secciones")</strong></h4>
         <table class="table table-bordered table-striped fixed_header">
             <tr>
@@ -122,10 +125,8 @@
         </table>
 
     </div>
-    @*<input type="button" id="btnSave" value="Asignar pregunta" class="btn btn-secondary" onclick="accionBotonCrearNueva()" />*@
-    @*</div>
-        <div class="row">*@
-    <div class="col-sm-7">
+
+    <div class="col-sm-6">
         <h4 align='center'><strong>@Html.Label("Banco de Preguntas")</strong></h4>
         <table class="table table-bordered table-striped fixed_header">
             <tr>
@@ -155,12 +156,32 @@
                         @Html.DisplayFor(modelItem => item.TextoPregunta)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.TipoPregunta)
+                        @switch (item.TipoPregunta)
+                        {
+                            case 1: @Html.Raw("Texto Libre");
+                            break;
+                            case 3: @Html.Raw("Sí-No");
+                            break;
+                        }
+
+
                     </td>
                 </tr>
             }
 
         </table>
+
+    </div>
+
+
+
+
+
+
+</div>
+<div class="row form-group">
+    <div class="col-sm-12 text-center">      
+        <button id="btnSave" class="btn btn-secondary m-*-auto"><span class="oi oi-arrow-left"></span> Asignar pregunta</button>
     </div>
 </div>
 <div class="row" id="ConformadosID">
@@ -213,8 +234,8 @@
 
 <script>
     function prueba() {
-            document.location = '@Url.Action("Index")';
-        }
+                            document.location = '@Url.Action("Index")';
+                        }
 </script>
 
 
