Filtro de nombr y cedula

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/VerPersonas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/VerPersonas.cshtml
@@ -9,11 +9,17 @@
 @using (Html.BeginForm())
 {
     <p>
+
         <div class="form-group, form-inline">
+
+            Nombre:
             @Html.TextBox("nom")
+            Cédula:
+            @Html.TextBox("ced")
             <input type="submit" value="Buscar" class="btn btn-default" />
         </div>
     </p>
+
 }
 <table class="table">
     <tr>
