--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/VistaPrevia.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/VistaPrevia.cshtml
@@ -1,18 +1,29 @@
-﻿@model Opiniometro_WebApp.Models.Item
+﻿@model Opiniometro_WebApp.Models.VistaPreviaPreguntaModel
 
-@if (Model.TipoPregunta == 3)
+@if (Model.Item.TipoPregunta == 3)
 {
     <div>
         <dl class="dl-horizontal">
             <dd>
-                @Html.DisplayFor(model => model.TextoPregunta)
+                @Html.DisplayFor(model => model.Item.TextoPregunta)
             </dd>
             <dd>
-                <input type="checkbox" name="Si" value='Si' disabled> Sí<br>
-                <input type="checkbox" name="No" value='No' disabled> No<br>
-                <input type="checkbox" name="NoSe" value='NoSe' disabled> No sé/ No respondo/ No aplica<br>
+                <table>
+                    @foreach (var option in Model.Opciones)
+                        {
+                            <tr>
+                                <td>
+                                    <input type="checkbox" disabled />
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(model => option.OpcionRespuesta)
+                                </td>
+                            </tr>
+
+                          }
+                </table>
             </dd>
-            @if (Model.TieneObservacion == true)
+            @if (Model.Item.TieneObservacion == true)
             {
                 <dd>
                     <textarea name="comentarioAdicional" rows="5" cols="40" disabled>Escriba su comentario aqui</textarea>
@@ -26,14 +37,14 @@ else
 {
     <dl class="dl-horizontal">
         <dd>
-            @Html.DisplayFor(model => model.TextoPregunta)
+            @Html.DisplayFor(model => model.Item.TextoPregunta)
         </dd>
 
         <dd>
             <textarea name="comentarioAdicional" rows="5" cols="40" disabled>Escriba su respuesta aquí</textarea>
         </dd>
-        <br>
-        @if (Model.TieneObservacion == true)
+
+        @if (Model.Item.TieneObservacion == true)
         {
             @Html.Label("Comentario Adicional")
             <dd>
