--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Create.cshtml
@@ -24,7 +24,7 @@
             @Html.Label("Código", htmlAttributes: new { @class = "control-label col-md-2" })
 
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CodigoFormulario, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.CodigoFormulario, new { htmlAttributes = new { @class = "form-control", @maxlength = "7" } })
                 @Html.ValidationMessageFor(model => model.CodigoFormulario, "", new { @class = "text-danger" })
 
             </div>
@@ -33,7 +33,7 @@
         <div class="form-group">
             @Html.Label("Nombre", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control", @maxlength = "26" } })
                 @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
             </div>
         </div>
