--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
@@ -23,7 +23,7 @@
         <div class="form-group">
             @Html.Label("Código", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ItemId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.ItemId, new { htmlAttributes = new { @class = "form-control", @maxlength = "11" } })
                 @Html.ValidationMessageFor(model => model.ItemId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -41,7 +41,7 @@
         <div class="form-group">
             @Html.Label("Texto Pregunta", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TextoPregunta, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.TextoPregunta, new { htmlAttributes = new { @class = "form-control", @maxlength = "121" } })
                 @Html.ValidationMessageFor(model => model.TextoPregunta, "", new { @class = "text-danger" })
             </div>
         </div>
