--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -189,47 +189,14 @@
     @Html.Partial("ConformadoVParcial", Model.Conformados)
 
 </div>
-        </div>
-
-<thead>
-
-    <tr>
-
-
-        <td>
 
 
 
-            <div>
-                <div style="float: right; width: 500px; padding: 15px;">
-
-
-                </div>
-
-                <div style=" width: 500px; padding:  15px;">
 
 
 
-                </div>
-            </div>
-
-
-            <button disabled>
-                Añadir pregunta al formulario.
-            </button>
-
-            <div style="float: left; width: 1000px; padding: 50px;">
-                @*@Html.Action("SeccionesAsignadas", new
-                    {CodForm = Model.Formulario.CodigoFormulario})*@
-            </div>
-
-            <input type="submit" value="Generate report" />
-            <div style="clear: both;"></div>
-        </td>
-
-    </tr>
-
-</thead>
+@Html.ActionLink("Terminar","Index", "Formulario", null, new { @class = "btn btn-default" })
+  
 
 
 <script>
