cambio de los titulos en la vista

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/ConformadoVParcial.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/ConformadoVParcial.cshtml
@@ -3,19 +3,19 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Orden_Seccion)
+            @Html.DisplayName("Orden Seccion")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.TituloSeccion)
+            @Html.DisplayName("Titulo Sección")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Orden_Item)
+            @Html.DisplayName("Orden Item")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ItemId)
+            @Html.DisplayName("Item ID")
         </th>       
         <th>
-            @Html.DisplayNameFor(model => model.Item.TextoPregunta)
+            @Html.DisplayName("Planteamiento Pregunta")
         </th>       
     </tr>
 
