--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
@@ -100,8 +100,9 @@
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
+                <div class="col-md-offset-2 col-md-3">
                     <input type="submit" value="Guardar" class="btn btn-default" />
+                    @Html.ActionLink("Cancelar", "VerPersonas", "Admin", "", new { @class = "btn btn-default" })
                 </div>
             </div>
         </div>
