--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/AsignacionFormularioGrupo.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/AsignacionFormularioGrupo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Opiniometro_WebApp.Models.GruposYFormsSeleccionados
 
-<table class="fixed_header">
+<table class="table">
     <thead>
         <tr>
             <th align='center'>
