--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
@@ -47,13 +47,13 @@
         </div>
 
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Categoria, "Categoría", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownList("NombreCategoria", null, "Seleccione")
-            @Html.ValidationMessageFor(model => model.Categoria, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.NombreCategoria, "Categoría", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.NombreCategoria, new SelectList(ViewBag.NombreCategoria, "Value", "Text"), "Seleccione")
+                @Html.ValidationMessageFor(model => model.NombreCategoria, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
 
         <div class="form-group">
@@ -67,7 +67,7 @@
 
         @* Creacion de botones en la misma linea y con color gris *@
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Crear" class="btn btn-secondary" p id="botonCrear" onclick="accionBotonCrear()" />
                 @*<input type="submit" value="Vista Previa" disabled class="btn btn-secondary" p id="botonVistaPrevia" onclick="accionBotonVistaPrevia()"/>*@
                 <input type="button" value="Cancelar" class="btn btn-secondary" id="botonCancelar" onclick="accionBotonCancelar()" />
@@ -77,9 +77,10 @@
 
         @* La accion que sucede al seleccionar boton Cancelar *@
         <script>
-        function accionBotonCancelar() {
-            document.location = '@Url.Action("Index")';
-        }
+            function accionBotonCancelar()
+            {
+                document.location = '@Url.Action("Index")';
+            }
         </script>
 
     </div>
